[package]
name = "nekoslife"
version = "0.2.1"
authors = ["AkiaCode <catry.me@gmail.com>"]
edition = "2018"
description = "nekos.life wrapper library"
license = "MIT"
repository = "https://github.com/AkiaCode/Nekos.life-rs"
documentation = "https://docs.rs/nekoslife"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls", "sfw", "nsfw"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

sfw = []
nsfw = []

blocking = ["reqwest/blocking"]

[dependencies]
serde = { version="1.0", features=["derive"] }
reqwest = { version="0.11", default-features=false, features=["json"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version="1", features=["full"] }
regex = "1.5.4"

[[example]]
name = "waifu_blocking"
path = "examples/waifu_blocking.rs"
required-features = ["blocking"]
