[package]
name = "nekoslife"
version = "0.2.1"
authors = ["AkiaCode <catry.me@gmail.com>"]
documentation = "https://docs.rs/nekoslife"
edition = "2018"
license = "MIT"
repository = "https://github.com/AkiaCode/Nekos.life-rs"
description = "nekos.life wrapper library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls", "sfw", "nsfw"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

sfw = []
nsfw = []

blocking = ["reqwest/blocking"]

[dependencies]
const_format = "0.2.22"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0"
url = "2.2.2"

[dev-dependencies]
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "waifu_blocking"
path = "examples/waifu_blocking.rs"
required-features = ["blocking"]
